force-app/main/default/objects/Attendee__c/fields/Attendee_Staff__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>