force-app/main/default/objects/Attendee__c/fields/Marketing_Event__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Marketing Event</label>
    <referenceTo>Marketing_Event__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>