force-app/main/default/objects/Attendee__c/validationRules/Attendee_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Attendee_Check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Attendee_Staff__c))  &amp;&amp;  NOT(ISBLANK( Attendee_Name__c ))</errorConditionFormula>
    <errorMessage>You cannot choose staff and contact at same time.</errorMessage>
</ValidationRule>