force-app/main/default/objects/Attendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attendee_Name__c</columns>
    <columns>Attendee_Staff__c</columns>
    <columns>Marketing_Event__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>